# QT-VTK-Medical-Platform

./: .gitignore  CMakeLists.txt  README.md
DcmtkUtil/: CMakeLists.txt
DcmtkUtil/include/: DcmCStoreSender.h
DcmtkUtil/source/: DcmCStoreSender.cpp
OpencvUtil/: CmakeLists.txt
OpencvUtil/include/: OpenCVImageUtil.h  OpenCVUtil.h  OpenCVVideo.h
OpencvUtil/source/: OpenCVImageUtil.cpp  OpenCVUtil.cpp  OpenCVVideo.cpp
QtGuiApp/: CMakeLists.txt  resources.qrc
QtGuiApp/Qml/: loading.qml
QtGuiApp/include/: AllHeader.h  BasebandReader.h  CustomSplashScreen.h  DicomViewer2D.h  DicomViewer3D.h  DicomViewerBase.h  FileManager.h  GlobalConfig.h  MainWindow-MEDQT.h  MainWindow-UI.h  MainWindow.h  MyCStoreSCP.h  MyOpenCVDialog.h  MyStruct.h  MyThread.h  MyThread_Work.h  OpenCVTest_UI.h  Viewer2D.h  Viewer3D.h  ViewerBase.h  VisualizationManager.h  VtkFileTypeDetector.h  pch.h  vtkFanShapeTimerCallback.h
QtGuiApp/source/: BasebandReader.cpp  DicomViewer2D.cpp  DicomViewer3D.cpp  DicomViewerBase.cpp  GlobalConfig.cpp  MainWindow-UI.h  MainWindow.cpp  MainWindow.h  MyCStoreSCP.cpp  MyOpenCVDialog.cpp  MyOpenCVDialog.h  MyThread_QRunnable.cpp  MyThread_Work.cpp  Viewer2D.cpp  Viewer3D.cpp  ViewerBase.cpp  VisualizationManager.cpp  VtkFileTypeDetector.cpp  customsplashscreen.cpp  main.cpp  vtkFanShapeTimerCallback.cpp
QtGuiApp/source/pannellitem/imageswitch/: imageswitch.cpp
QtGuiApp/src/: FileManager.cpp  FileManager.h  GlobalConfig.cpp  GlobalConfig.h  MainWindow-MEDQT.h  MainWindow.cpp  MainWindow.h  main.cpp
QtGuiApp/translations/: QtGuiApp_en_US.ts  QtGuiApp_zh_CN.ts
QtGuiApp/ui/: MainWindow-UI.ui
QtGuiAppTests/: Cmakelists.txt
QtGuiAppTests/source/: test_example.cpp
VtkAPP/: CMakeLists.txt
VtkAPP/include/: VtkApp_Export.h  VtkDemoClass.h  myVtkInteractorStyleImage.h
VtkAPP/source/: VtkDemoClass.cpp  myVtkInteractorStyleImage.cpp
VtkAPP/src/: myVtkInteractorStyleImage.cpp
VtkUtil/: CMakeLists.txt
VtkUtil/include/: BasebandReader.h  Viewer2D.h  Viewer3D.h  ViewerBase.h  VisualizationManager.h  VtkDemoClass.h  VtkFileTypeDetector.h  VtkUtil_Export.h  myVtkInteractorStyleImage.h  pch.h  vtkFanShapeTimerCallback.h
VtkUtil/source/: BasebandReader.cpp  Viewer2D.cpp  Viewer3D.cpp  ViewerBase.cpp  VisualizationManager.cpp  VtkFileTypeDetector.cpp  vtkFanShapeTimerCallback.cpp
singleton/: CMakeLists.txt
singleton/source/: GlobalConfig.h  header.h
ui/: MainWindow-MEDQT.h  MainWindow-MEDQT.ui  MainWindow-UI.ui  OpenCVTest_UI.ui
